--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="col-md-5 text-right">
               <ul class="site-nav-ul js-clone-nav text-left d-none d-lg-inline-block">
                 <li class="has-children">
-                  <a href="#home-section" class="nav-link">RAW MATERIAL LOCATION </a>
+                  <a href="#home-section" class="nav-link"></a>
                   <ul class="dropdown">
                     <!-- <li>
                       <a href="index.html">Hero Image BG</a>
@@ -92,7 +92,7 @@
               </ul> -->
 
               <ul class="site-nav-ul-none-onepage text-right d-inline-block d-lg-none">
-                <li><a href="#" class="js-menu-toggle">Menu</a></li>
+                <li><a href="#" class="js-menu-toggle"></a></li>
               </ul>
 
             </div>
