--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="unslate_co--site-mobile-menu">
       <div class="close-wrap d-flex">
         <a href="#" class="d-flex ml-auto js-menu-toggle">
-          <span class="close-label">Close</span>
+          <span class="close-label"></span>
           <div class="close-times">
             <span class="bar1"></span>
             <span class="bar2"></span>
@@ -58,6 +58,28 @@
                 <li class="has-children">
                   <a href="#home-section" class="nav-link"></a>
                   <ul class="dropdown">
+
+                  <!DOCTYPE html>
+<html>
+<head>
+    <title>Black Background Page</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            background-color: black;
+            color: white; /* Text in white for visibility */
+            font-family: Arial, sans-serif;
+        }
+    </style>
+</head>
+<body>
+    <h1>Full Black Background</h1>
+    <p>This black background covers the entire page.</p>
+</body>
+</html>
+
                     <!-- <li>
                       <a href="index.html">Hero Image BG</a>
                     </li>
