--- a/index.html
+++ b/index.html
@@ -124,9 +124,16 @@
         <div class="container">
           <div class="row align-items-center">
               
-            <div class="col-md-7 mx-auto text-center">
+<!--             <div class="col-md-7 mx-auto text-center">
               <h1 class="heading gsap-reveal-hero">R M LOCATION</h1>
-              <div style="height:2em;"></div>
+              <div style="height:2em;"></div> -->
+              <!DOCTYPE html>
+<html>
+<body style="margin:0;display:flex;justify-content:center;align-items:center;height:100vh;background:black;color:white;">
+    <h1>R M LOCATION</h1>
+</body>
+</html>
+
               
               <script src="https://sheetdb.io/s/f/8sia7plwcywu5.js"></script>
               <!-- <h2 class="subheading gsap-reveal-hero">I’m Glenn Chapman Hoyer A Product Designer Based In San Francisco</h2> -->
