--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
           <div class="row align-items-center">
               
 <!--             <div class="col-md-7 mx-auto text-center">
-              <h1 class="heading gsap-reveal-hero">R M LOCATION</h1>
-              <div style="height:2em;"></div> -->
+              <h1 class="heading gsap-reveal-hero">R M LOCATION</h1> -->
+              <div style="height:2em;"></div>
               <!DOCTYPE html>
 <html>
 <body style="margin:0;display:flex;justify-content:center;align-items:center;height:100vh;background:black;color:white;">
