--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
 <!--             <div class="col-md-7 mx-auto text-center">
               <h1 class="heading gsap-reveal-hero">R M LOCATION</h1> -->
               <div style="height:2em;"></div>
+            <!DOCTYPE html>
+<html>
+<body>
+     <img src="images/image.jpg" alt="My Image" style="vertical-align:middle;">
+</body>
+</html>
+
               <!DOCTYPE html>
 <html>
 <body style="margin:0;display:flex;justify-content:center;align-items:center;height:100vh;background:black;color:white;">
@@ -134,7 +141,7 @@
 </body>
 </html>
 
-              
+              image.jpg
               <script src="https://sheetdb.io/s/f/8sia7plwcywu5.js"></script>
               <!-- <h2 class="subheading gsap-reveal-hero">I’m Glenn Chapman Hoyer A Product Designer Based In San Francisco</h2> -->
             </div>
