--- a/index.html
+++ b/index.html
@@ -127,12 +127,31 @@
 <!--             <div class="col-md-7 mx-auto text-center">
               <h1 class="heading gsap-reveal-hero">R M LOCATION</h1> -->
               <div style="height:2em;"></div>
+        
             <!DOCTYPE html>
 <html>
+<head>
+    <title>Centered Image</title>
+    <style>
+        body {
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center; /* Horizontal center */
+            align-items: center;     /* Vertical center */
+            background-color: black; /* Optional background */
+        }
+        img {
+            max-width: 50%;  /* Medium size (adjust as needed) */
+            height: auto;    /* Keeps aspect ratio */
+        }
+    </style>
+</head>
 <body>
-     <img src="images/image.jpg" alt="My Image" style="vertical-align:middle;">
+    <img src="images/image.jpg" alt="Centered Image">
 </body>
 </html>
+
 
               <!DOCTYPE html>
 <html>
