--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             background-color: black; /* Optional background */
         }
         img {
-            max-width: 50%;  /* Medium size (adjust as needed) */
+            max-width: 20%;  /* Medium size (adjust as needed) */
             height: auto;    /* Keeps aspect ratio */
         }
     </style>
@@ -153,14 +153,15 @@
 </html>
 
 
-              <!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 <body style="margin:0;display:flex;justify-content:center;align-items:center;height:100vh;background:black;color:white;">
-    <h1>R M LOCATION</h1>
+    <b>R M LOCATION</b>
 </body>
 </html>
 
-              image.jpg
+
+            
               <script src="https://sheetdb.io/s/f/8sia7plwcywu5.js"></script>
               <!-- <h2 class="subheading gsap-reveal-hero">I’m Glenn Chapman Hoyer A Product Designer Based In San Francisco</h2> -->
             </div>
