--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
             margin: 0;
             height: 100vh;
             display: flex;
-            justify-content: center; /* Horizontal center */
-            align-items: center;     /* Vertical center */
-            background-color: black; /* Optional background */
+            justify-content: center; /Horizontal center/
+            align-items: center;     /Vertical center/
+            background-color: black; /Optional background/
         }
         img {
             max-width: 20%;  /* Medium size (adjust as needed) */
