--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <h1 class="heading gsap-reveal-hero">R M LOCATION</h1> -->
               <div style="height:2em;"></div>
         
-            <!DOCTYPE html>
+<!--             <!DOCTYPE html>
 <html>
 <head>
     <title>Centered Image</title>
@@ -150,7 +150,9 @@
 <body>
     <img src="images/image.jpg" alt="Centered Image">
 </body>
-</html>
+</html> -->
+            <img src="https://res.cloudinary.com/brandpad/image/upload/7596/logo-clearspace33.png" alt="Centered JPG">
+
 
 
   <!DOCTYPE html>
