--- a/index.html
+++ b/index.html
@@ -127,38 +127,25 @@
 <!--             <div class="col-md-7 mx-auto text-center">
               <h1 class="heading gsap-reveal-hero">R M LOCATION</h1> -->
               <div style="height:2em;"></div>
-        
-<!--             <!DOCTYPE html>
+        <!DOCTYPE html>
 <html>
 <head>
-    <title>Centered Image</title>
-    <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center; /Horizontal center/
-            align-items: center;     /Vertical center/
-            background-color: black; /Optional background/
-        }
-        img {
-            max-width: 20%;  /* Medium size (adjust as needed) */
-            height: auto;    /* Keeps aspect ratio */
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Center Bold Text</title>
+  <style>
+    html, body { height: 100%; margin: 0; }
+    body {
+      display: grid;
+      place-items: center;          /* centers both ways */
+      background: #000;             /* black background */
+      color: #fff;                  /* white text */
+      font: bold 28px/1.2 Arial, sans-serif; /* bold + size */
+    }
+  </style>
 </head>
 <body>
-    <img src="images/image.jpg" alt="Centered Image">
-</body>
-</html> -->
-            <img src="https://res.cloudinary.com/brandpad/image/upload/7596/logo-clearspace33.png" alt="Centered JPG">
-
-
-
-  <!DOCTYPE html>
-<html>
-<body style="margin:0;display:flex;justify-content:center;align-items:center;height:100vh;background:black;color:white;">
-    <b>R M LOCATION</b>
+  R M LOCATION 
 </body>
 </html>
 
